HA_LightSwitch some cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
-    <string name="app_name">Light Switch</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">HA - Light Switch</string>
     <string name="tile_name">Light Switch</string>
 </resources>
